// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-svelte > should add svelte loader properly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": false,
              },
              "emitCss": false,
              "hotReload": false,
              "preprocess": {
                "markup": [Function],
                "script": [Function],
                "style": [Function],
              },
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "svelte": "<ROOT>/node_modules/<PNPM_INNER>/svelte/src/runtime",
    },
    "conditionNames": [
      "svelte",
      "...",
    ],
    "extensions": [
      ".svelte",
    ],
    "mainFields": [
      "svelte",
      "...",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;

exports[`plugin-svelte > should override default svelte-loader options throw options.svelteLoaderOptions 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": false,
              },
              "emitCss": true,
              "hotReload": false,
              "preprocess": null,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "svelte": "<ROOT>/node_modules/<PNPM_INNER>/svelte/src/runtime",
    },
    "conditionNames": [
      "svelte",
      "...",
    ],
    "extensions": [
      ".svelte",
    ],
    "mainFields": [
      "svelte",
      "...",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;

exports[`plugin-svelte > should set dev and hotReload to false in production mode 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": false,
              },
              "emitCss": true,
              "hotReload": false,
              "preprocess": {
                "markup": [Function],
                "script": [Function],
                "style": [Function],
              },
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "svelte": "<ROOT>/node_modules/<PNPM_INNER>/svelte/src/runtime",
    },
    "conditionNames": [
      "svelte",
      "...",
    ],
    "extensions": [
      ".svelte",
    ],
    "mainFields": [
      "svelte",
      "...",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;

exports[`plugin-svelte > should support pass custom preprocess options 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": false,
              },
              "emitCss": true,
              "hotReload": false,
              "preprocess": {
                "markup": [Function],
                "script": [Function],
                "style": [Function],
              },
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "svelte": "<ROOT>/node_modules/<PNPM_INNER>/svelte/src/runtime",
    },
    "conditionNames": [
      "svelte",
      "...",
    ],
    "extensions": [
      ".svelte",
    ],
    "mainFields": [
      "svelte",
      "...",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;

exports[`plugin-svelte > should turn off hmr by hand correctly 1`] = `
{
  "module": {
    "rules": [
      {
        "test": /\\\\\\.svelte\\$/,
        "use": [
          {
            "loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
            "options": {
              "compilerOptions": {
                "dev": false,
              },
              "emitCss": true,
              "hotReload": false,
              "preprocess": {
                "markup": [Function],
                "script": [Function],
                "style": [Function],
              },
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "svelte": "<ROOT>/node_modules/<PNPM_INNER>/svelte/src/runtime",
    },
    "conditionNames": [
      "svelte",
      "...",
    ],
    "extensions": [
      ".svelte",
    ],
    "mainFields": [
      "svelte",
      "...",
    ],
  },
  "resolveLoader": {
    "alias": {
      "svelte-loader": "<ROOT>/node_modules/<PNPM_INNER>/svelte-loader/index.js",
    },
  },
}
`;
